@@ -1,3 +1,4 @@
+22. Nov. 2011 - amo - Menu handling removed from IWorkbench
 21. Nov. 2001 - amo - IBaseLayout introduced to hold reference to menu and toolbars; API changes caused by IBaseLayout
 17. Nov. 2011 - amo - removed dependency to workbench style, changed to Enum
 17. Nov. 2011 - amo - removed dependency to layoutManager definition in WorkbenchLayout
